[project]
name = "github_rest_api"
version = "0.26.0"
description = "Simple wrapper of GitHub REST APIs."
authors = [{ name = "Ben Du", email = "longendu@yahoo.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
dependencies = [
    "requests>=2.28.2",
    "psutil>=5.9.4",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.10",
    "ty>=0.0.8",
]

[tool.hatch.build.targets.sdist]
include = ["github_rest_api"]

[tool.hatch.build.targets.wheel]
include = ["github_rest_api"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"