[project]
name = "github_rest_api"
version = "0.28.0"
description = "Simple wrapper of GitHub REST APIs."
authors = [{ name = "Ben Du", email = "longendu@yahoo.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
dependencies = [
    "requests>=2.28.2",
    "psutil>=5.9.4",
    "dulwich>=0.25.1",
]

[dependency-groups]
dev = [
    "deptry>=0.24.0",
    "pyright>=1.1.407",
    "ruff>=0.14.10",
    "ty>=0.0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
